--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   nice_button: ^0.1.7
   flutter_svg: ^0.18.0
+  http: ^0.12.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -49,7 +50,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
+    - assets/ripple.gif
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -61,12 +62,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: RUS
+      fonts:
+        - asset: assets/fonts/RSU/RSU_BOLD.ttf
+        - asset: assets/fonts/RSU/RSU_light.ttf
+        - asset: assets/fonts/RSU/RSU_Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
