--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: RUS
+    - family: RSU
       fonts:
         - asset: assets/fonts/RSU/RSU_BOLD.ttf
         - asset: assets/fonts/RSU/RSU_light.ttf
