--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="naiban"
+        android:label="LAZADO"
         android:icon="@drawable/logodark">
         <activity
             android:name=".MainActivity"
