--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   flutter_svg: ^0.18.0
   http: ^0.12.2
   modal_bottom_sheet: ^1.0.0+1
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
+  flutter_signin_button: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
